--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "prepare": "node -e \"if (process.env.CI !== 'true') { require('child_process').execSync('husky', {stdio: 'inherit'}) }\""
+    "prepare": "node -e \"if (!process.env.CI && !process.env.VERCEL) { require('child_process').execSync('npx husky', {stdio: 'inherit'}) }\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
